TRV-1393 - Updated Cover Type with new buttons, styled and added info text, fixed double border issue on btn inverse when one is active, remove icons from old cover type buttons

--- a/src/main/webapp/bundles/core/less/layouts.less
+++ b/src/main/webapp/bundles/core/less/layouts.less
@@ -22,3 +22,7 @@
 		display:inline-block;
 	}
 }
+
+.no-padding {
+	padding: 0;
+}
